--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,5 +11,7 @@ jobs:
       - uses: actions/setup-python@v3
         with:
            python-version: "3.x"
+      - name: Install deps
+        run: pip install flake8./ && pip install flake8
       - name: Run linter
         run: flake8 ./
