--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
         with:
-           python-version: "3.x"
+           python-version: "3.10"
       - name: Install deps
-        run: pip install flake8./ && pip install flake8
+        run: pip install flake8
       - name: Run linter
         run: flake8 ./
