--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,6 @@ jobs:
         with:
            python-version: "3.10"
       - name: Install deps
-        run: pip install flake8 ./ && pip install black ./
+        run: pip install -r requirements.txt
       - name: Run linter
         run: flake8 ./
