--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,3 +15,5 @@ jobs:
         run: pip install -r requirements.txt
       - name: Run linter
         run: flake8 ./
+      - name: Run formatters
+        run: black --check ./ && isort --check-only ./
